--- a/app-frontend/app/src/components/page_wrapper/page_wrapper.less
+++ b/app-frontend/app/src/components/page_wrapper/page_wrapper.less
@@ -1,14 +1,1 @@
 @import "../../vars";
-
-.page {
-  &_github_link {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: 0;
-    width: 140px;
-    @media screen and (max-width: @mb) {
-      width: 110px;
-    }
-  }
-}
